Fix paginator count spacing

--- a/sass/blocks/_boss-page-main.sass
+++ b/sass/blocks/_boss-page-main.sass
@@ -356,7 +356,7 @@ $block: ".boss-page-main"
     // $Page main container group MOD: adjust safe checks table
     &_adjust_sc-table
       padding: 25px 25px 30px
-      margin-bottom: 60px
+      margin-bottom: 40px
       background-color: #FFF
 
       @media screen and (max-width: 1280px)
@@ -364,7 +364,6 @@ $block: ".boss-page-main"
 
       @media screen and (max-width: 1120px)
         padding: 0
-        margin-bottom: 0
         background-color: transparent
 
       @media screen and (max-width: 960px)
@@ -772,6 +771,9 @@ $block: ".boss-page-main"
     text-align: center
 
     &_position_last
+      margin-top: 20px
+
+    &_space_regular
       margin-top: 20px
 
     &_space_large
